--- a/Landmarks/IOS-courses.xcodeproj/xcshareddata/xcschemes/IOS-COURSES.xcscheme
+++ b/Landmarks/IOS-courses.xcodeproj/xcshareddata/xcschemes/IOS-COURSES.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "298109CC25A5E54A003CA3D5"
+               BuildableName = "IOS-COURSESUITests.xctest"
+               BlueprintName = "IOS-COURSESUITests"
+               ReferencedContainer = "container:IOS-courses.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
